Bootstrap integration Many more views are changed.

--- a/views/boosters.pug
+++ b/views/boosters.pug
@@ -4,8 +4,8 @@ block content
 	script.
 		document.getElementById('nav-boosttyp').classList.add('active');
 
-	div(class='container-fluid')
-		div(class='row ms-1')
+	div(class='container-lg')
+		div(class='row')
 			table(class='table table-responsive table-striped table-hover')
 				thead
 					tr
