--- a/views/logged.pug
+++ b/views/logged.pug
@@ -1,10 +1,12 @@
 extends layout
 
 block append scripts
-    script.
-        window.onload = function() {
-            setTimeout(function() {window.location.href = '/';}, 4000);
-        };
+	script.
+		window.onload = function() {
+				setTimeout(function() {window.location.href = '/';}, 4000);
+		};
 
 block content
-    h1= "User '" + user.email + "' logged."
+	div(class='container-fluid')
+		div(class='row m-1')
+			h3= "User '" + user.email + "' logged."
