--- a/views/404.pug
+++ b/views/404.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-    br
-    h1 404 not found
-    p You requested [ #{url} ] but I was too lazy to go there.
+	div(class='container-fluid')
+		div(class='row ms-1')
+			h3 404 not found
+			p You requested [ #{url} ] but I was too lazy to go there.
