--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  br
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  div(class='container-fluid')
+    div(class='row ms-1')
+      h3= message
+      h4= error.status
+      pre #{error.stack}
