--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,6 @@
 extends layout
 
 block content
-  h1= 'Welcome to ' + title
+  div(class='container-fluid')
+    div(class='row m-1')
+      h3= 'Welcome to ' + title
