--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -12,75 +12,72 @@ block content
 		document.getElementById('nav-rewlist').classList.add('active');
 
 	- nbRewards = totalCount;
-	if rewards.length === 0
-		h2 Empty list
-	else
-		div(class='container-fluid')
-			div(class='row ms-1')
-				h1(style='margin-top:20px;') Rewards from #{offset + 1} to #{offset + rewards.length} over #{totalCount} rewards.
-			form(action='/rewardForm/list' id="formOptions" method='post')
-				div(class='row ms-1')
-					div(class='col-sm p-1')
-						if (offset > 0)
-							button(style='margin-left:5px' onclick="return first();" type='submit') first
-							button(style='margin-left:5px' onclick="return previous();" type='submit') <==
-						else
-							button(style='margin-left:5px' disabled) first
-							button(style='margin-left:5px' disabled) <==
-						input(type='text' id='nb' name='nb' size='6' value=nb onchange='onChangeNb();' style='text-align: center; margin-left: 5px;')
-						input(type='hidden' id='offset' name='offset' value=offset)
-						if (hasNext === true)
-							button(style='margin-left:5px' onclick="return next();" type='submit') ==>
-						else
-							button(style='margin-left:5px' disabled) ==>
-						if (offset + nb < totalCount)
-							button(style='margin-left:5px' onclick="return last("+totalCount+");") last
-						else
-							button(style='margin-left:5px' disabled) last
-					div(class='col-sm p-1')
-						label(for='dateLow' style='margin-right:5px;') Date >=
+	div(class='container-fluid')
+		div(class='row mt-1')
+			h3 Sortie Rewards from #{offset + 1} to #{offset + rewards.length} over #{totalCount} rewards.
+		form(action='/rewardForm/list' id="formOptions" method='post')
+			div(class='row')
+				div(class='col-sm p-1')
+					if (offset > 0)
+						button(style='margin-left:5px' onclick="return first();" type='submit') first
+						button(style='margin-left:5px' onclick="return previous();" type='submit') <==
+					else
+						button(style='margin-left:5px' disabled) first
+						button(style='margin-left:5px' disabled) <==
+					input(type='text' id='nb' name='nb' size='6' value=nb onchange='onChangeNb();' style='text-align: center; margin-left: 5px;')
+					input(type='hidden' id='offset' name='offset' value=offset)
+					if (hasNext === true)
+						button(style='margin-left:5px' onclick="return next();" type='submit') ==>
+					else
+						button(style='margin-left:5px' disabled) ==>
+					if (offset + nb < totalCount)
+						button(style='margin-left:5px' onclick="return last("+totalCount+");") last
+					else
+						button(style='margin-left:5px' disabled) last
+				div(class='col-sm p-1')
+					label(for='dateLow' style='margin-right:5px;') Date >=
+					button(onclick="return resetDate(this.nextElementSibling);" type='button') X
+					input(type='text' name='dateLow' id='dateLow' size='10' value=dateLow readonly)
+					input(type='hidden' readonly)
+					button(onclick="return toggleDatepicker1(this.previousElementSibling);" type='button') Pick Date
+				div(class='col-sm p-1')
+						label(for='dateHigh' style='margin-right:5px;') Date <=
 						button(onclick="return resetDate(this.nextElementSibling);" type='button') X
-						input(type='text' name='dateLow' id='dateLow' size='12' value=dateLow readonly)
+						input(type='text' name='dateHigh' id='dateHigh' size='10' value=dateHigh readonly)
 						input(type='hidden' readonly)
-						button(onclick="return toggleDatepicker1(this.previousElementSibling);" type='button') Pick Date
-					div(class='col-sm p-1')
-							label(for='dateHigh' style='margin-right:5px;') Date <=
-							button(onclick="return resetDate(this.nextElementSibling);" type='button') X
-							input(type='text' name='dateHigh' id='dateHigh' size='12' value=dateHigh readonly)
-							input(type='hidden' readonly)
-							button(onclick="return toggleDatepicker2(this.previousElementSibling);" type='button') Pick Date
-					div(class='col-sm p-1')
-						label(for='perType') Filter by type :
-						select(name='type' id='perType' onchange='onSelect(this)')
-							option -
-							each type in rewardTypes
-								if (rewardTypeSelected && (rewardTypeSelected.toString() === type._id.toString()))
-									option(value= type._id selected) #{type.name}
-								else
-									option(value= type._id) #{type.name}
-				div(class='row ms-1')
-					table(class='table table-responsive table-striped table-hover')
-						thead
+						button(onclick="return toggleDatepicker2(this.previousElementSibling);" type='button') Pick Date
+				div(class='col-sm p-1')
+					label(for='perType') Filter by type :
+					select(name='type' id='perType' onchange='onSelect(this)')
+						option -
+						each type in rewardTypes
+							if (rewardTypeSelected && (rewardTypeSelected.toString() === type._id.toString()))
+								option(value= type._id selected) #{type.name}
+							else
+								option(value= type._id) #{type.name}
+			div(class='row')
+				table(class='table table-responsive table-striped table-hover')
+					thead
+						tr
+							th Details
+							th Date
+							th Type
+							th Additional information
+					tbody
+						each val in rewards
 							tr
-								th ID
-								th Date
-								th Type
-								th Additional information
-						tbody
-							each val in rewards
-								tr
-									td
-										a(href='/reward/view/'+val._id)= '...'+val._id.toString().substr(-5, 5)
-									if (val.date)
-										td= date2string(val.date)
+								td
+									a(class='btn btn-outline-info', href='/reward/view/'+val._id) More info
+								if (val.date)
+									td= date2string(val.date)
+								else
+									td -
+								td= val.type.name
+								td
+									if (val.booster)
+										span= boosterTypes[val.booster]
 									else
-										td -
-									td= val.type.name
-									td
-										if (val.booster)
-											span= boosterTypes[val.booster]
+										if (val.riven)
+											span= val.riven.weaponName
 										else
-											if (val.riven)
-												span= val.riven.weaponName
-											else
-												span -
+											span -
