--- a/views/rivenForm.pug
+++ b/views/rivenForm.pug
@@ -1,52 +1,47 @@
 extends layout
 
 block append scripts
-    script(src='/javascripts/rivenScripts.js')
+	script(src='/javascripts/rivenScripts.js')
 
 block content
-    script.
-        var navitem = document.getElementById('nav-rivform');
-        navitem.classList.add('active');
+	script.
+		$('#nav-rivform').addClass('active')
 
-    // special invisible Div
-    div(id='condition-exemple' hidden=true)
-        label(for='cond-select') To be modified
-        select(name = 'conditions[]' id = 'cond-select')
-            option none
-            each val in conditions.optionals
-                option(value= val._id) #{val.description}
-        span(onClick='removeRow();' style='margin-left: 20px;') [-]
-        span(onClick='addRow();' style='margin-left: 20px;') [+]
-        br
-        br
-    h1 Create a new Riven
-    // Riven creation form
-    form(method='POST' action='/riven/form' onsubmit='return validateForm(this);')
-        label(for='riven-type') Type :
-        select(name = 'type' id = 'riven-type')
-            each val in types
-                option(value= val._id) #{val.name}
-        br
-        br
-        label(for='weaponName') Weapon Name :
-        input(name='weaponName' id='weaponName')
-        br
-        br
-        label(for='note') Additional information :
-        input(name='note' id='note' size='40')
-        br
-        br
-        label(for='mcondition') Mandatory Condition :
-        select(name = 'conditions[]' id='mcondition')
-            option none
-            each val in conditions.mandatories
-                option(value= val._id) #{val.description}
-        span(id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;') [+]
-        br
-        label(for='conditionVariable') Mandatory condition variable 'N' :
-        input(type='number' min='0' id='conditionVariable' name='N')
-        br
-        br
-        div(id='condition-rows')
-        br
-        input(name='submit' type='submit' value='Add Riven' style='margin-left: 20px;')
+	// special invisible Div
+	div(class='input-group input-group-sm m-1 p-1' id='condition-exemple' hidden=true)
+		label(class='mt-1' for='cond-select') To be modified
+		select(class='form-select mx-1' name = 'conditions[]' id = 'cond-select')
+			option none
+			each val in conditions.optionals
+				option(value= val._id) #{val.description}
+		span(class='btn btn-outline-info mx-2' style='font-size:larger;' onClick='removeRow();') -
+		span(class='btn btn-outline-info' style='font-size:larger;' onClick='addRow();') +
+	div(class='container-lg')
+		div(class='row m-1')
+			h3 Create a new Riven
+		// Riven creation form
+		form(method='POST' action='/riven/form' onsubmit='return validateForm(this);')
+			div(class='input-group mt-2')
+				label(class='input-group-text' for='riven-type') Type :
+				select(class='form-select' name = 'type' id = 'riven-type')
+					each val in types
+						option(value= val._id) #{val.name}
+			div(class='input-group mt-2')
+				label(class='input-group-text' for='weaponName') Weapon Name :
+				input(class='form-control' name='weaponName' id='weaponName' placeholder='ex: Nagantaka')
+			div(class='input-group mt-2')
+				label(class='input-group-text' for='note') Additional information (source of the riven) :
+				input(class='form-control' name='note' id='note' size='40' placeholder='ex: Transmutation')
+			div(class='input-group mt-2')
+				label(class='input-group-text' for='mcondition') Mandatory Condition :
+				select(class='form-select' name = 'conditions[]' id='mcondition')
+					option none
+					each val in conditions.mandatories
+						option(value= val._id) #{val.description}
+				span(class='btn btn-outline-info mx-1' id='mand-span' onClick='addOptional(this)') +
+			div(class='input-group mt-2')
+				label(class='input-group-text' for='conditionVariable') Mandatory condition variable 'N' :
+				input(class='input-control' type='number' min='0' id='conditionVariable' name='N')
+			div(id='condition-rows')
+			div(class='row mt-4')
+				input(class='btn btn-outline-primary w-25 ms-5' name='submit' type='submit' value='Add Riven')
