--- a/views/rivenList.pug
+++ b/views/rivenList.pug
@@ -4,12 +4,12 @@ block content
 	script.
 		document.getElementById('nav-rivlist').classList.add('active');
 
-	div(class='container-fluid')
-		div(class='row ms-1')
+	div(class='container-lg')
+		div(class='row mt-1')
 			if rivens.length === 0
-				h2 Empty list
+				h3 Empty list
 			else
-				h2 List of Rivens
+				h3 List of Rivens
 				p
 					="Those are rivens obtained by transmutation or special events but not as sortie's rewards."
 					br
@@ -17,7 +17,7 @@ block content
 					a(href='/rewardForm/list') List Rewards
 					= " for that last kind of rivens."
 		if rivens.length > 0
-			div(class='row ms-1')
+			div(class='row')
 				table(class='table table-responsive table-striped table-hover')
 					thead
 						tr
