--- a/views/statsBooster.pug
+++ b/views/statsBooster.pug
@@ -4,12 +4,12 @@ block content
 	script.
 		document.getElementById('nav-stats').classList.add('active');
 
-	div(class='container-fluid')
-		div(class='row ms-1')
+	div(class='container-lg')
+		div(class='row m-1')
 			if (boosterStats)
-				h1= title
+				h3= title
 				p A total of #{boosterStats.count} boosters
-				div(class='row ms-1')
+				div(class='row')
 					table(class='table table-responsive table-striped table-hover')
 						thead
 							th Booster type
