--- a/views/types.pug
+++ b/views/types.pug
@@ -14,8 +14,8 @@ block content
 	//    br
 	//    h1= coucou
 
-	div(class='container-fluid')
-		div(class='row ms-1')
+	div(class='container-lg')
+		div(class='row')
 			table(class='table table-responsive table-striped table-hover')
 				thead
 					tr
