--- a/views/rivenUpdate.pug
+++ b/views/rivenUpdate.pug
@@ -12,6 +12,7 @@ block append scripts
 block content
 	script.
 		document.getElementById('nav-rivform').classList.add('active');
+		document.getElementById('nav-rivform').innerText = 'Update riven';
 
 	// special invisible Div
 	div(class='input-group input-group-sm m-1 p-1' id='condition-exemple' hidden=true)
