--- a/views/types.pug
+++ b/views/types.pug
@@ -2,17 +2,7 @@ extends layout
 
 block content
 	script.
-		var navitem = document.getElementById('nav-rivtyp');
-		navitem.classList.add('active');
-
-	//div(class='container')
-	//    h3.
-	//        List of #[a(href='https://warframe.fandom.com/wiki/Riven_Mods') Riven] Types
-	//    ul(class='striped-list')
-	//        for type in types
-	//            li= type.name
-	//    br
-	//    h1= coucou
+		document.getElementById('nav-rivtyp').classList.add('active');
 
 	div(class='container-lg')
 		div(class='row')
