--- a/views/worldEvents.pug
+++ b/views/worldEvents.pug
@@ -2,8 +2,7 @@ extends layout
 
 block content
 	script.
-		var navitem = document.getElementById('nav-events');
-		navitem.classList.add('active');
+		document.getElementById('nav-events').classList.add('active');
 
 	div(class='container-lg')
 		div(class='row')
