--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,6 @@ html(lang='en')
     block scripts
       - const version = 1.1
       script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js', integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p', crossorigin='anonymous')
-      script(src="https://code.jquery.com/jquery-3.6.0.min.js")
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(charset='utf-8')
   body
@@ -40,10 +39,16 @@ html(lang='en')
               a(class='nav-link', aria-current='page', href='/worldState/events', id='nav-events') WorldEvents
             li(class='nav-item')
               if (connected === true)
-                a(class='nav-link', aria-current='page', href='/users/disconnect') Disconnect
+                a(class='nav-link', aria-current='page', href='/users/disconnect')
+                  svg(xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512" style='width: 32; height: auto;')
+                    circle(fill="#EF4136" transform="rotate(45 -181.019 437.02) scale(3.28877)" r="77.84")
+                    path(fill="#fff" d="m162.03 311.94-28.73 28.73 39.61 39.62 29.11-29.12c30.83 25.41 60.09 27.74 87.12 18.45L143.65 224.13c-9.12 26.74-6.66 55.93 18.38 87.81zm-31.46-150.11c-6.42-6.42-6.42-16.83 0-23.25 6.42-6.42 16.83-6.42 23.25 0l27.22 27.22c9.99-11.21 20.7-21.87 30.85-32.03l21.7 21.69 49.46-49.45c8.33-8.34 21.98-8.34 30.32 0 8.33 8.33 8.33 21.98 0 30.31l-49.47 49.47 63.1 63.09 49.46-49.46c8.34-8.34 21.98-8.34 30.32 0s8.33 21.98 0 30.31l-49.47 49.46 22.5 22.5c-10 10-20.74 20.7-32.14 30.74L375 359.76c6.42 6.41 6.42 16.83 0 23.25-6.42 6.41-16.84 6.41-23.25 0L130.57 161.83z")
               else
-                a(class='nav-link', aria-current='page', href='/users/loginForm', id='nav-login') Login
-      section
+                a(class='nav-link', aria-current='page', href='/users/loginForm', id='nav-login')
+                  svg(xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512" style='width: 32; height: auto;')
+                    circle(fill="#01A437" transform="rotate(45 -181.019 437.02) scale(3.28877)" r="77.84")
+                    path(fill="#fff" d="m162.27 317.75-30.92 30.65 39.62 39.61 31.29-31.03c69.87 57.6 131.69-3.38 177.78-49.48L357.55 285l49.47-49.45c8.33-8.33 8.33-21.98 0-30.32-8.34-8.34-21.99-8.33-30.32 0l-49.46 49.46-63.1-63.09 49.46-49.47c8.34-8.33 8.34-21.98 0-30.31-8.34-8.34-21.98-8.34-30.32 0l-49.46 49.46-21.69-21.7c-47.36 47.36-106.64 105.87-49.86 178.17z")
+      section(id='pageContent')
         block content
       footer(class='page-footer fixed-bottom', style='background-color: #e9e9f9;')
         div(class='container-fluid', style='width: 100%;height:25px;')
