--- a/views/rewardForm.pug
+++ b/views/rewardForm.pug
@@ -1,17 +1,27 @@
 extends layout
 
 block append link
-	link(rel='stylesheet', href='/dp/dp.css')
+	link(rel='stylesheet', href='https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css')
 
 block append scripts
-	script(src='/dp/dp.js')
+	script(src="https://code.jquery.com/jquery-3.6.0.min.js")
+	script(src='https://code.jquery.com/ui/1.13.1/jquery-ui.js')
+	script(type='text/javascript').
+		$(document).ready(function () {
+			$('#date').datepicker({
+				dateFormat: 'yy/mm/dd',
+				onSelect: function (d) {
+					$('#formOptions').submit();
+				}
+			});
+		});
 	script(src='/javascripts/rewardScripts.js')
 
 block content
 	script.
 		document.getElementById('nav-rewform').classList.add('active');
 
-	// special invisible Divs
+	// invisible Divs, ready for cloning
 	div(class='input-group mt-2' id='boosters' hidden=true)
 		label(class='input-group-text' for='booster-select') Select a booster type :
 		select(class='form-select' name='booster' id = 'booster-select')
@@ -23,8 +33,8 @@ block content
 			option none
 			each val in conditions.optionals
 				option(value= val._id) #{val.description}
-		span(class='btn btn-outline-info mx-2' style='font-size:larger;' onClick='removeRow(this);') -
-		span(class='btn btn-outline-info' style='font-size:larger;' onClick='addRow();') +
+		span(class='btn btn-outline-info mx-2' onClick='removeRow(this);' style='font-size:larger;') -
+		span(class='btn btn-outline-info' onClick='addRow();' style='font-size:larger;') +
 	div(class='row' id='riven-example' hidden=true)
 		div(class='input-group mt-2')
 			label(class='input-group-text' for='riven-type') Type :
@@ -53,7 +63,7 @@ block content
 			div(class='input-group mt-2')
 				label(class='input-group-text' for='date') Date of reward acquisition :
 				input(class='form-control' type='text' name='date' id='date' size='24' readonly)
-				button(class='btn btn-outline-info mx-1' onclick="return toggleDatepicker(this.previousElementSibling);" type='button') Pick Date
+				button(class='btn btn-outline-info mx-1' type='button' onClick='return resetDate(this.previousElementSibling);') X
 			div(class='input-group mt-2')
 				label(class='input-group-text' for='type') Select the reward type :
 				select(class='form-select' name='type' id='type' onchange='onSelect(this)')
