--- a/views/rewardUpdate.pug
+++ b/views/rewardUpdate.pug
@@ -1,148 +1,149 @@
 extends layout
 
 block append link
-    link(rel='stylesheet', href='/dp/dp.css')
+	link(rel='stylesheet', href='https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css')
 
 block append scripts
-    script.
-        var reward = !{JSON.stringify(reward)};
-    script(src='/dp/dp.js')
-    script(src='/javascripts/rewardScripts.js')
-    script(src='/javascripts/updateScripts.js')
+	script(src="https://code.jquery.com/jquery-3.6.0.min.js")
+	script(src='https://code.jquery.com/ui/1.13.1/jquery-ui.js')
+	script(type='text/javascript').
+		$(document).ready(function () {
+			$('#date').datepicker({
+				dateFormat: 'yy/mm/dd',
+				onSelect: function (d) {
+					$('#formOptions').submit();
+				}
+			});
+		});
+	script.
+		var reward = !{JSON.stringify(reward)};
+	script(src='/javascripts/rewardScripts.js')
+	script(src='/javascripts/updateScripts.js')
 
 block content
-    script.
-        var navitem = document.getElementById('nav-rewform');
-        navitem.classList.add('active');
+	script.
+		document.getElementById('nav-rewform').classList.add('active');
+		document.getElementById('nav-rewform').innerText = 'Update reward';
 
-    // invisible Divs, ready for cloning
-    div(id='boosters' hidden=true)
-        label(for='booster-select') Select a booster type :
-        select(name='booster' id = 'booster-select')
-            each val in boosters
-                option(value= val._id) #{val.name}
-    div(id='condition-example' hidden=true)
-        label(for='cond-select') To be modified
-        select(name = 'rivenConditions[]' id = 'cond-select')
-            option none
-            each val in conditions.optionals
-                option(value= val._id) #{val.description}
-        span(onClick='removeRow(this);' style='margin-left: 20px;') [-]
-        span(onClick='addRow();' style='margin-left: 20px;') [+]
-    div(id='riven-example' hidden=true)
-        label(for='riven-type') Type :
-        select(name = 'rivenType' id = 'riven-type')
-            each val in rivens
-                option(value= val._id) #{val.name}
-        br
-        br
-        label(for='weaponName') Weapon Name :
-        input(name='rivenWeaponName' id='weaponName')
-        br
-        br
-        label(for='mcondition-example') Mandatory Condition :
-        select(name = 'rivenConditions[]' id='mcondition-example')
-            option none
-            each val in conditions.mandatories
-                option(value= val._id) #{val.description}
-        span(id='mand-span-example' onClick='addOptional(this)' style='margin-left: 20px;') [+]
-        br
-        label(for='rivenConditionVariable') Mandatory condition variable 'N' :
-        input(type='number' min='0' id='rivenConditionVariable' name='rivenN')
-        br
-        br
-        div(id='condition-rows-example')
-    // Beginning of the visible template
-    h1 Modification of a Sortie's Reward
-    br
-    form(method='POST' name='rewardForm' action='/reward/form' onsubmit='return validateForm(this);')
-        if (reward)
-            div
-                label(for='id') ID of the reward
-                input(type='text' name='_id' id='id' size='24' value=reward._id readonly)
-            br
-        div
-            - var formattedDate = ''
-            if (reward && reward.date)
-                - formattedDate = date2string(reward.date)
-            label(for='date') Date of reward acquisition :
-            input(type='text' name='date' id='date' size='24' value=formattedDate readonly)
-            button(onclick="return toggleDatepicker(this.previousElementSibling);" type='button') Pick Date
-            button(onclick="return resetDate(this.previousElementSibling.previousElementSibling);" style="margin-left:20px;") Reset Date
-        br
-        label(for='type') Select the reward type :
-        select(name='type' id='type' onchange='onSelect(this)')
-            each val in types
-                if (reward.type._id.toString() === val._id.toString())
-                    option(value= val._id selected) #{val.name}
-                else
-                    option(value= val._id) #{val.name}
-        br
-        br
-        div(id='container')
-            if (reward && reward.booster)
-                div(id='boosters')
-                    label(for='booster-select') Select a booster type :
-                    select(name='booster' id = 'booster-select')
-                        each val in boosters
-                            if (reward.booster._id.toString() === val._id.toString())
-                                option(value=val._id selected) #{val.name}
-                            else
-                                option(value=val._id) #{val.name}
-            if (reward && reward.riven)
-                div(id='riven')
-                    label(for='riven-type') Type :
-                    select(name = 'rivenType' id = 'riven-type')
-                        each val in rivens
-                            if (reward.riven.type._id.toString() === val._id.toString())
-                                option(value= val._id selected) #{val.name}
-                            else
-                                option(value= val._id) #{val.name}
-                    br
-                    br
-                    label(for='weaponName') Weapon Name :
-                    input(name='rivenWeaponName' id='weaponName' value=reward.riven.weaponName)
-                    br
-                    br
-                    - var nbcond = reward.riven.conditions.length
-                    label(for='mcondition') Mandatory Condition :
-                    select(name = 'rivenConditions[]' id='mcondition')
-                        option none
-                        each val in conditions.mandatories
-                            if (reward.riven.conditions.length > 0 && reward.riven.conditions[0]._id.toString() === val._id.toString())
-                                option(value= val._id selected) #{val.description}
-                            else
-                                option(value= val._id) #{val.description}
-                    if (nbcond > 1)
-                        span(id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;' hidden) [+]
-                    else
-                        span(id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;') [+]
-                    br
-                    label(for='rivenConditionVariable') Mandatory condition variable 'N' :
-                    input(type='number' min='0' id='rivenConditionVariable' name='rivenN' value= reward.riven.N)
-                    br
-                    br
-                    div(id='condition-rows')
-                        - var index = 1
-                        while index < nbcond
-                            div(id='condition-row'+index)
-                                label(for='cond-select'+index) Optional condition #{index} :
-                                select(name = 'rivenConditions[]' id = 'cond-select'+index)
-                                    option none
-                                    each val in conditions.optionals
-                                        if (reward.riven.conditions[index]._id.toString() === val._id.toString())
-                                            option(value= val._id selected) #{val.description}
-                                        else
-                                            option(value= val._id) #{val.description}
-                                if (index < nbcond - 1)
-                                    span(onClick='removeRow(this);' style='margin-left: 20px;' hidden=true) [-]
-                                else
-                                    span(onClick='removeRow(this);' style='margin-left: 20px;') [-]
-                                if (index < nbcond - 1 || index >= 5)
-                                    span(onClick='addRow();' style='margin-left: 20px;' hidden=true) [+]
-                                else
-                                    span(onClick='addRow();' style='margin-left: 20px;') [+]
-                            - index++
-        br
-        br
-        input(name='submit' type='submit' value='Update Reward' style='margin-left: 20px;')
+	// invisible Divs, ready for cloning
+	div(class='input-group mt-2' id='boosters' hidden=true)
+		label(class='input-group-text' for='booster-select') Select a booster type :
+		select(class='form-select' name='booster' id = 'booster-select')
+			each val in boosters
+				option(value= val._id) #{val.name}
+	div(class='input-group input-group-sm m-1 p-1' id='condition-example' hidden=true)
+		label(class='mt-1' for='cond-select') To be modified
+		select(class='form-select mx-1' name = 'rivenConditions[]' id = 'cond-select')
+			option none
+			each val in conditions.optionals
+				option(value= val._id) #{val.description}
+		span(class='btn btn-outline-info mx-2' onClick='removeRow(this);' style='font-size:larger;') -
+		span(class='btn btn-outline-info' onClick='addRow();' style='font-size:larger;') +
+	div(class='row' id='riven-example' hidden=true)
+		div(class='input-group mt-2')
+			label(class='input-group-text' for='riven-type') Type :
+			select(class='form-select' name = 'rivenType' id = 'riven-type')
+				each val in rivens
+					option(value= val._id) #{val.name}
+		div(class='input-group mt-2')
+			label(class='input-group-text' for='weaponName') Weapon Name :
+			input(class='form-control' name='rivenWeaponName' id='weaponName')
+		div(class='input-group mt-2')
+			label(class='input-group-text' for='mcondition-example') Mandatory Condition :
+			select(class='form-select' name = 'rivenConditions[]' id='mcondition-example')
+				option none
+				each val in conditions.mandatories
+					option(value= val._id) #{val.description}
+			span(class='btn btn-outline-info mx-1' id='mand-span-example' onClick='addOptional(this)') +
+		div(class='input-group mt-2')
+			label(class='input-group-text' for='rivenConditionVariable') Mandatory condition variable 'N' :
+			input(class='form-control' type='number' min='0' id='rivenConditionVariable' name='rivenN')
+		div(id='condition-rows-example')
+	// Beginning of the visible template
+	div(class='container-lg')
+		div(class='row m-1')
+			h3 Modification of a Sortie's Reward
+		form(method='POST' name='rewardForm' action='/reward/form' onsubmit='return validateForm(this);')
+			if (reward)
+				div(class='input-group input-group-sm mb-2')
+					label(class='input-group-text' for='id') ID of the reward
+					input(class='form-control' type='text' name='_id' id='id' size='24' value=reward._id readonly aria-describedby='id')
+			div(class='input-group mt-2')
+				- var formattedDate = ''
+				if (reward && reward.date)
+					- formattedDate = date2string(reward.date)
+				label(class='input-group-text' for='date') Date of reward acquisition :
+				input(class='form-control' type='text' name='date' id='date' size='24' value=formattedDate readonly)
+				//button(onclick="return toggleDatepicker(this.previousElementSibling);" type='button') Pick Date
+				button(class='btn btn-outline-info mx-1' onclick="return resetDate(this.previousElementSibling);" style="margin-left:20px;") X
+			div(class='input-group mt-2')
+				label(class='input-group-text' for='type') Select the reward type :
+				select(class='form-select' name='type' id='type' onchange='onSelect(this)')
+					each val in types
+						if (reward.type._id.toString() === val._id.toString())
+							option(value= val._id selected) #{val.name}
+						else
+							option(value= val._id) #{val.name}
+			div(id='container')
+				if (reward && reward.booster)
+					div(class='input-group mt-2' id='boosters')
+						label(class='input-group-text' for='booster-select') Select a booster type :
+						select(class='form-select' name='booster' id = 'booster-select')
+							each val in boosters
+								if (reward.booster._id.toString() === val._id.toString())
+									option(value=val._id selected) #{val.name}
+								else
+									option(value=val._id) #{val.name}
+				if (reward && reward.riven)
+					div(id='riven')
+						div(class='input-group mt-2')
+							label(class='input-group-text' for='riven-type') Type :
+							select(class='form-select' name = 'rivenType' id = 'riven-type')
+								each val in rivens
+									if (reward.riven.type._id.toString() === val._id.toString())
+										option(value= val._id selected) #{val.name}
+									else
+										option(value= val._id) #{val.name}
+						div(class='input-group mt-2')
+							label(class='input-group-text' for='weaponName') Weapon Name :
+							input(class='form-control' name='rivenWeaponName' id='weaponName' value=reward.riven.weaponName)
+						div(class='input-group mt-2')
+							- var nbcond = reward.riven.conditions.length
+							label(class='input-group-text' for='mcondition') Mandatory Condition :
+							select(class='form-select' name = 'rivenConditions[]' id='mcondition')
+								option none
+								each val in conditions.mandatories
+									if (reward.riven.conditions.length > 0 && reward.riven.conditions[0]._id.toString() === val._id.toString())
+										option(value= val._id selected) #{val.description}
+									else
+										option(value= val._id) #{val.description}
+							if (nbcond > 1)
+								span(class='btn btn-outline-info' id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;' hidden) +
+							else
+								span(class='btn btn-outline-info' id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;') +
+						div(class='input-group mt-2')
+							label(class='input-group-text' for='rivenConditionVariable') Mandatory condition variable 'N' :
+							input(class='form-control' type='number' min='0' id='rivenConditionVariable' name='rivenN' value= reward.riven.N)
+						div(id='condition-rows')
+							- var index = 1
+							while index < nbcond
+								div(class='input-group input-group-sm m-1 p-1' id='condition-row'+index)
+									label(class='mt-1' for='cond-select'+index) Optional condition #{index} :
+									select(class='form-select mx-1' name = 'rivenConditions[]' id = 'cond-select'+index)
+										option none
+										each val in conditions.optionals
+											if (reward.riven.conditions[index]._id.toString() === val._id.toString())
+												option(value= val._id selected) #{val.description}
+											else
+												option(value= val._id) #{val.description}
+									if (index < nbcond - 1)
+										span(class='btn btn-outline-info mx-2' onClick='removeRow(this);' hidden=true) -
+									else
+										span(class='btn btn-outline-info mx-2' onClick='removeRow(this);' ) -
+									if (index < nbcond - 1 || index >= 5)
+										span(class='btn btn-outline-info' onClick='addRow();' hidden=true) +
+									else
+										span(class='btn btn-outline-info' onClick='addRow();') +
+								- index++
+			div(class='row mt-4')
+				input(class='btn btn-outline-primary w-25 ms-5' name='submit' type='submit' value='Update Reward')
