--- a/views/rivenDetails.pug
+++ b/views/rivenDetails.pug
@@ -2,8 +2,7 @@ extends layout
 
 block content
 	script.
-		var navitem = document.getElementById('nav-rivlist');
-		navitem.classList.add('active');
+		document.getElementById('nav-rivlist').classList.add('active');
 
 	div(class='container-fluid')
 		div(class='row m-1')
