--- a/views/rivenForm.pug
+++ b/views/rivenForm.pug
@@ -5,7 +5,13 @@ block append scripts
 
 block content
 	script.
-		$('#nav-rivform').addClass('active')
+		//$('#nav-rivform').addClass('active') // jQuery force
+		// document.addEventListener("DOMContentLoaded", function() { // classic event, except IE
+		// 	document.removeEventListener( "DOMContentLoaded", arguments.callee, false );
+		// });
+		window.onload = function () { // classic event, but after everything is downloaded, even images
+			document.getElementById('nav-rivform').classList.add('active');
+		}
 
 	// special invisible Div
 	div(class='input-group input-group-sm m-1 p-1' id='condition-exemple' hidden=true)
