Update : Filter Sortie's rewards with "bootstrap-table" functionalities. Debug : Booster stats

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,18 @@ html(lang='en')
             li(class='nav-item')
               a(class='nav-link', aria-current='page', href='/rewardForm/list', id='nav-rewlist') List rewards
             li(class='nav-item')
+              a(class='nav-link', aria-current='page', href='/rewardForm/list2', id='nav-rewlist2')
+                svg(xmlns="http://www.w3.org/2000/svg" style='width: 32; height: auto;' viewBox="0 0 12000 12000" preserveAspectRatio="xMidYMid meet")
+                  g(transform="translate(0.0,11000.0) scale(1, -1)" fill="#000000" stroke="none")
+                    path(d="M3886 9784 c-89 -21 -174 -71 -246 -144 -103 -104 -150 -217 -150 -365 0 -148 47 -261 150 -365 74 -75 157 -122 251 -145 95 -22 1892 -22 1987 0 134 32 248 113 324 229 108 167 108 396 0 562 -76 116 -191 198 -324 229 -92 21 -1902 21 -1992 -1z")
+                    path(d="M1230 9439 c-310 -41 -571 -166 -792 -378 -217 -208 -344 -436 -410 -734 l-23 -102 0 -3500 0 -3500 23 -102 c66 -298 194 -527 409 -733 196 -188 411 -302 686 -362 l102 -23 3675 0 3675 0 102 23 c298 66 527 194 733 409 188 196 302 411 362 686 l23 102 0 3500 0 3500 -23 102 c-61 276 -174 490 -362 686 -206 216 -438 345 -733 409 -92 20 -131 22 -407 23 l-305 0 -56 -26 c-79 -37 -133 -90 -171 -167 -29 -59 -33 -76 -33 -152 0 -76 4 -93 33 -152 38 -77 92 -130 171 -167 55 -26 60 -26 336 -32 215 -5 293 -10 338 -23 191 -54 354 -190 441 -368 83 -170 76 163 76 -3633 0 -3799 7 -3463 -77 -3635 -38 -79 -60 -109 -132 -181 -72 -72 -102 -94 -181 -132 -173 -84 185 -77 -3810 -77 -3995 0 -3637 -7 -3810 77 -79 38 -109 60 -181 132 -71 71 -94 102 -133 181 -83 169 -76 -159 -76 3635 0 3794 -7 3466 76 3635 84 171 256 314 440 366 46 13 122 18 339 23 l281 6 66 33 c77 38 130 92 167 171 22 47 26 70 26 141 0 71 -4 94 -26 141 -37 79 -90 133 -167 171 l-66 33 -271 2 c-148 0 -299 -3 -335 -8z")
+                    path(d="M1723 7305 c-75 -16 -168 -64 -228 -117 -170 -150 -215 -410 -107 -623 32 -64 143 -175 207 -207 112 -57 257 -74 371 -44 383 102 508 577 225 856 -127 126 -292 173 -468 135z")
+                    path(d="M3292 7163 c-55 -19 -147 -104 -177 -163 -54 -107 -52 -231 7 -343 37 -69 82 -111 158 -146 l55 -26 2370 0 2370 0 56 26 c72 34 134 96 168 168 23 49 26 69 26 156 0 81 -4 109 -22 147 -29 63 -96 134 -158 166 l-50 27 -2380 2 c-2103 1 -2385 0 -2423 -14z")
+                    path(d="M1718 5204 c-172 -41 -317 -176 -368 -341 -25 -81 -27 -216 -4 -294 49 -166 180 -299 342 -349 76 -24 202 -26 278 -6 383 102 508 577 225 856 -127 126 -303 176 -473 134z")
+                    path(d="M3292 5063 c-55 -19 -147 -104 -177 -163 -91 -179 -22 -396 153 -482 l67 -33 2370 0 2370 0 56 26 c72 34 134 96 168 168 23 49 26 69 26 156 0 81 -4 109 -22 147 -29 63 -96 134 -158 166 l-50 27 -2380 2 c-2103 1 -2385 0 -2423 -14z")
+                    path(d="M1731 3120 c-68 -15 -180 -72 -235 -121 -183 -163 -221 -448 -88 -655 242 -374 811 -282 922 150 24 93 25 137 6 227 -37 174 -167 322 -332 380 -68 23 -206 33 -273 19z")
+                    path(d="M3297 2975 c-21 -8 -56 -27 -76 -42 -217 -159 -184 -498 58 -612 l56 -26 2370 0 2370 0 55 26 c70 33 136 99 169 169 23 48 26 68 26 155 0 89 -3 106 -28 157 -17 34 -50 77 -82 106 -98 90 153 82 -2514 81 -2008 0 -2372 -3 -2404 -14z")
+            li(class='nav-item')
               a(class='nav-link', aria-current='page', href='/stats', id='nav-stats') Stats
             li(class='nav-item')
               a(class='nav-link', aria-current='page', href='/worldState/events', id='nav-events') WorldEvents
