New raw format for the Sortie's rewards, needed as data source for Bootstrap Table in the new rewardList2.pug.

--- a/views/rewardList2.pug
+++ b/views/rewardList2.pug
@@ -15,9 +15,9 @@ block content
 			div(id="toolbar-title")
 				h3 Sortie's Rewards
 			table(id="table"
-				data-content-type="application/x-www-form-urlencoded"
+				data-content-type="application/json"
 				data-toolbar="#toolbar-title"
-				data-url="/rewards.json"
+				data-url="/reward/raw"
 				data-filter-control="true"
 				data-header-style="headerStyle"
 				data-row-style="rowStyle"
