--- a/views/rivenList.pug
+++ b/views/rivenList.pug
@@ -34,7 +34,7 @@ block content
 					tr
 						th(data-field="details" data-formatter="detailsFormatter" data-events="detailsEvents") Details
 						//th(data-field="date" data-formatter="dateFormatter" data-sortable="true") Date
-						th(data-field="source.source" data-filter-control="select") Source
+						th(data-field="source.name" data-filter-control="select") Source
 						th(data-field="type.name" data-filter-control="select") Type
 						th(data-field="weaponName" data-filter-control="input") Weapon name
 				tbody(style='height: 10px !important; overflow-y: auto;')
