--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -86,7 +86,7 @@ block content
 			window.detailsEvents = {
 				'click .details-btn': function (e, value, row, index) {
 					//alert('You click like action, row: ' + JSON.stringify(row));
-					window.location.href = 'https://localhost/reward/view/' + row._id;
+					window.location.href = '/reward/view/' + row._id;
 				}
 			}
 
